@@ -1,3 +1,9 @@
+2009-01-20  Joseph Myers  <joseph@codesourcery.com>
+
+	PR other/38758
+	* longlong.h: Update copyright years.  Use soft-fp license
+	notice.
+
 2009-01-19  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
